[package]
name = "glx"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
edition = "2018"
build = false  # this is slightly slow and also messes up "cargo watch"

[dependencies]
byteorder = "*"
csv = "1"
either = "*"
env_logger = "0.6"
euclid = "*"
flate2 = "*"
image = "*"
geo = "0.12"
geo-types = "0.4"
log = "0.4"
lyon = "*"
palette = "0.4"
protobuf = "2"
rayon = "1"
shaderc = "0.5"
wgpu = { version = "0.2.2", git = "https://github.com/gfx-rs/wgpu-rs", rev = "a4ad7ae6ff2fc42396b802968dcc95bbf0612235" } # from wgpu_glyph
wgpu_glyph = { "git" = "https://github.com/hecrj/wgpu_glyph", "rev" = "e20f471"}

[dev-dependencies]
lazy_static = "1"

[build-dependencies]
protoc-rust = "2"

[features]
default = ["metal"]  # For Paul's convenience
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]
