[package]
name = "glx"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
edition = "2018"
build = false  # this is slightly slow and also messes up "cargo watch"

[dependencies]
byteorder = "*"
csv = "1"
either = "*"
env_logger = "0.6"
euclid = "*"
flate2 = "*"
image = "*"
geo = "0.12"
geo-types = "0.4"
log = "0.4"
lyon = "*"
palette = "0.4"
protobuf = "2"
rayon = "1"
# wgpu must EXACTLY match what's required by wgpu_glyph. I think that "*" will only bring in a published dep, it won't
# bring in an arbitrary GitHub commit.
wgpu = { "git" = "https://github.com/gfx-rs/wgpu-rs", "rev" = "5522c912f7e2f4f33a1167fb0c8ee4549f066dcf"}
wgpu_glyph = { "git" = "https://github.com/hecrj/wgpu_glyph", "rev" = "f0362a5"}

[dev-dependencies]
lazy_static = "1"

[build-dependencies]
protoc-rust = "2"
shaderc = "0.5"

[features]
default = ["metal"]  # For Paul's convenience
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]
